# portfolio

./: README.md
chatgpt-knowledge-graph-query-qa/: .gitignore  README.md  README.md.bak
chatgpt-knowledge-graph-query-qa/backend/askwiki/: Dockerfile  pyproject.toml
chatgpt-knowledge-graph-query-qa/backend/askwiki/askwiki/: gpt3_sparql.py  gpt3_summarizer.py  langchain_agent.py  langchain_sparql.py  main.py  t5_summarizer.py  wikibase_sparql_runner.py
chatgpt-knowledge-graph-query-qa/backend/askwiki/tests/: test_basic.py  test_dummy.py  test_gpt3_sparql.py  test_gpt3_summarizer.py  test_gpt3_t5.py  test_langchain_agent.py  test_langchain_gpt3_pipeline.py  test_langchain_pipeline.py  test_langchain_sparql.py  test_langchain_t5.py  test_t5_summarizer.py  test_wikibase_sparql_runner.py
covid-hypothesis-testing-project/: README.md  question_1.Rmd
covid-hypothesis-testing-statistical-analysis/: README.md  question_2.Rmd  question_3.Rmd
fake-news-proliferation-project/: .gitignore
fake-news-sim-project/: README.md  assumptions.txt  fake_news_sim.py  requirements.txt
fake-news-simulation-ooo-programming/: requirements.txt
flight-prediction-using-big-data/: README.md
github-optimization/: action-plan.md  audit-report.md  phase2-completion-report.md  phase5-coherence-report.md  profile-readme.md  quick-wins.md
info-consumption-proposal-project/: README.md  Research Proposal.docx
job-bot-nlp-project/: README.md  job_bot.py  nlp_analysis.py
ml-sysems-engineering/: README.md  README.md.bak  load.js  run.sh
sentence-level-bias-detection-nlp-paper/: readme.md  (+2 more)
(+57 files in other folders)
